SelectStatementExecutionTest compilation was fixed.